[tool.poetry]
name = "uitclass"
version = "0.1.0"
description = ""
authors = ["talha-mahmood <talhamahmood1261@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
